Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-456

It is not possible to set parameters in service and operation levels

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • None
    • None
    • None
    • Any

    Description

      It should be possible to set parameters for service and operation levels.
      This is vital as users might have different services and operations with different parameter configurations.
      For example a user might need to enable security (or any other module) only for few services. Moreover it might be necessary to have encryption enabled only for one service and authentication mechanism for another service.
      I tested this scenario by adding parameters to the services.xml of the echo service and engaging the rampart module in axis2.xml (global). But there were not parameters in the message context.
      But this works fine when I specify parameters in the global level.

      Here is a sample parameter configuration in rampart.

      <parameter name="OutflowSecurity">
      <action>
      <items>UsernameToken Timestamp Encrypt</items>
      <user>Gampola</user>
      <passwordType>passwordDigest</passwordType>
      <!-Following should be changed with your DLL or SO path->
      <passwordCallbackClass>/home/kau/axis2/c/deploy/bin/samples/rampart/callback/libpwcb.so</passwordCallbackClass>
      <timeToLive>360</timeToLive>
      <encryptionKeyTransportAlgorithm>http://www.w3.org/2001/04/xmlenc#rsa-1_5</encryptionKeyTransportAlgorithm>
      <encryptionSymAlgorithm>http://www.w3.org/2001/04/xmlenc#aes256-cbc</encryptionSymAlgorithm>
      <encryptionPropFile>/home/kau/axis2/c/rampart/samples/keys/ahome/b_cert.cert</encryptionPropFile>
      <!-encryptionKeyIdentifier options : Embedded IssuerSerial DirectReference KeyIdentifier->
      <encryptionKeyIdentifier>IssuerSerial</encryptionKeyIdentifier>
      </action>
      </parameter>

      <parameter name="InflowSecurity">
      <action>
      <items>Encrypt</items>
      <!-Following should be changed with your DLL or SO path->
      <passwordCallbackClass>/home/kau/axis2/c/deploy/bin/samples/rampart/callback/libpwcb.so</passwordCallbackClass>
      <decryptionPropFile>/home/kau/axis2/c/rampart/samples/keys/ahome/a_store.pfx</decryptionPropFile>
      <encryptionUser>a</encryptionUser>
      </action>
      </parameter>

      Attachments

        Activity

          People

            kau Malinda Kaushalye Kapuruge
            kau Malinda Kaushalye Kapuruge
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: