Fixed bug in JIRA AXIS2C-456 Plus some minor modifications in rampart